# webapp

./: db.sqlite3  pyproject.toml  vypocty.txt
company/: forms.py  models.py  urls.py  views.py
company/migrations/: 0001_initial.py
core/: settings.py  urls.py
csvapp/: urls.py  utils.py  views.py
dashboard/: views.py
filesapp/: admin.py  models.py  urls.py  views.py
filesapp/migrations/: 0001_initial.py  0002_financialfile_delete_uploadedfile.py  0003_financialfile_csv_file.py  0004_financialrow.py  0005_financialanalysis.py  0006_alter_financialanalysis_key_and_more.py
filesapp/utils/: calculations.py
finance/: models.py  urls.py  views.py
finance/migrations/: 0001_initial.py
parsing/: urls.py  utils.py  views.py
templates/: base.html  dashboard.html  login.html  register.html  upload.html  welcome.html
templates/company/: company_form.html  company_list.html  detail.html  form.html
templates/files/: confirm_overwrite.html  dashboard.html  file_list.html  show_data.html  upload.html
templates/filesapp/: dashboard.html
