[project]
name = "webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "brona.klus"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lxml (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
